Remove unfinished games

--- a/Boxy/Run.ipynb
+++ b/Boxy/Run.ipynb
@@ -4,29 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To Do:\n",
-    "\n",
-    "Add spring boxes (metal/wood, one class that adds a shape of an arrow, and that's it, rest will be handled outside)\n",
-    "\n",
-    "Add Tnt destruct sequence\n",
-    "\n",
-    "Add protection box (and following sprite?)\n",
-    "\n",
-    "Level saving\n",
-    "\n",
-    "Game structure, saving, scores, etc.\n",
-    "\n",
-    "Background (background should generate automatically, and should move at 1/2 speed... maybe two layers of background?)\n",
-    "\n",
-    "Level generation function\n",
-    "\n",
-    "\n",
-    "Known bugs:\n",
-    "falling stacks of boxes ON a moving platform results in slight overlap (but nothing functionally problematic)\n",
-    "\n",
-    "Credits:\n",
-    "“Sound effects obtained from zapsplat.com and freesound.org\"\n",
-    "\"Idea shamelessly taken from Crash Bandicoot 2: Wrath of Cortex for PS2\"\n"
+    "### Run cell below the play Boxy!"
    ]
   },
   {
@@ -142,8 +120,6 @@
     "crouch_key = False\n",
     "jump_hold = False\n",
     "\n",
-    "character= Player([200*S,floor-300*S])\n",
-    "\n",
     "# Object to determine what to draw on screen\n",
     "screen = Body([0,0],display_size,corporeal=True,solid=False,velocity=[0,0])   \n",
     "    \n",
@@ -248,7 +224,7 @@
     "        \n",
     "        # sort box_list so that closest bodies interact first. \n",
     "        # this prevents incorrect interactions like diagonally breaking boxes\n",
-    "        box_list = sorted(box_list, key= lambda x: sum((character.pos-x.pos)**2), reverse=False)\n",
+    "     #   box_list = sorted(box_list, key= lambda x: sum((character.pos-x.pos)**2), reverse=False)\n",
     "\n",
     "\n",
     "\n",
@@ -265,7 +241,8 @@
     "                    hit = character.hit_box().overlap(i)\n",
     "                else:\n",
     "                    hit = False\n",
-    "\n",
+    "                \n",
+    "             \n",
     "                    \n",
     "                if dim>-1: # overlap!\n",
     "                   # print(dim)\n",
@@ -336,6 +313,7 @@
     "                        character.is_off()\n",
     "                        \n",
     "                elif hit: # if hit box overlap but no character overlap\n",
+    "\n",
     "                    if isinstance(i,Box.Box):\n",
     "                        \n",
     "                        if not isinstance(i,Box.Metal) and (not isinstance(i,Box.Metal_Wood) or character.flopping>0):\n",
@@ -415,96 +393,33 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "x = 2\n",
-    "master_body_list[x].on_me,master_body_list[x]"
+    "To Do:\n",
+    "\n",
+    "Add spring boxes (metal/wood, one class that adds a shape of an arrow, and that's it, rest will be handled outside)\n",
+    "\n",
+    "Add Tnt destruct sequence\n",
+    "\n",
+    "Add protection box (and following sprite?)\n",
+    "\n",
+    "Level saving\n",
+    "\n",
+    "Game structure, saving, scores, etc.\n",
+    "\n",
+    "Background (background should generate automatically, and should move at 1/2 speed... maybe two layers of background?)\n",
+    "\n",
+    "Level generation function\n",
+    "\n",
+    "\n",
+    "Known bugs:\n",
+    "falling stacks of boxes ON a moving platform results in slight overlap (but nothing functionally problematic)\n",
+    "\n",
+    "Credits:\n",
+    "“Sound effects obtained from zapsplat.com and freesound.org\"\n",
+    "\"Idea shamelessly taken from Crash Bandicoot 2: Wrath of Cortex for PS2\"\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "foreground_list\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "    squeeze = [[],[]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "text_rect"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "text = font.render(str(score_list['fruit']), True, black, None)\n",
-    "textRect = text.get_rect()  \n",
-    "textRect.center = (display_height*2.5,display_height) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = 5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = {'hi':4,'hoo':2}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for k,i,j in enumerate(zip(x.values(),x.values())):\n",
-    "    print(k,i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
