Visuals and slide hitbox bug fix
Updated color pallete, fixed some spikey box dimensional issues, and fixed bug of slide hitbox changing direction when character hits a wall (now store self.direction and change only when nonzero)

--- a/Boxy/Run.ipynb
+++ b/Boxy/Run.ipynb
@@ -357,6 +357,9 @@
     "            crashed = True #dead!\n",
     "\n",
     "\n",
+    "##############################################################################\n",
+    "    # Prepare canvas and draw visuals\n",
+    "    \n",
     "    # Earthquake maker!\n",
     "    if ticker == -1 and False:\n",
     "        ticker = len(shifts)-2  \n",
@@ -364,10 +367,12 @@
     "        ticker -=1\n",
     "    \n",
     "    \n",
+    "    # fill display with white and set center position\n",
     "    gameDisplay.fill(white)\n",
     "    screen.pos = np.array([character.pos[0]-display_size[0]/2,0])\n",
     "    \n",
     "   \n",
+    "    # draw all bodies\n",
     "    big_list = background_list+platform_list+box_list+gettable_list\n",
     "    if not crashed:\n",
     "        big_list += [character]\n",
@@ -381,6 +386,7 @@
     "        if screen.overlap(bod):\n",
     "            bod.draw(gameDisplay,screen.pos)\n",
     "\n",
+    "    # draw counters and icons at top\n",
     "    current_status.draw(gameDisplay)\n",
     "    \n",
     "    \n",
@@ -420,6 +426,13 @@
     "“Sound effects obtained from zapsplat.com and freesound.org\"\n",
     "\"Idea shamelessly taken from Crash Bandicoot 2: Wrath of Cortex for PS2\"\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
