--- a/Boxy/Run.ipynb
+++ b/Boxy/Run.ipynb
@@ -11,19 +11,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pygame 1.9.6\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n",
-      "squeezed\n",
-      "squeezed\n",
-      "squeezed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pygame\n",
     "\n",
@@ -393,12 +381,11 @@
     "    \n",
     "   \n",
     "    # draw all bodies\n",
-    "    big_list = background_list+platform_list+box_list+gettable_list\n",
+    "    big_list = background_list + platform_list + box_list + gettable_list + foreground_list\n",
+    "\n",
     "    if not crashed:\n",
-    "        big_list += [character]\n",
-    "        \n",
-    "    big_list += foreground_list\n",
-    "    \n",
+    "        big_list.insert(len(background_list),character)\n",
+    "  \n",
     "    for bod in scenery:\n",
     "        if abs((screen.pos[0]-bod.pos[0])*(1.0-background_speed))<(screen.size[0]+bod.size[0]):\n",
     "            bod.draw(gameDisplay,screen.pos - [(character.pos[0]-bod.pos[0])*background_speed,0])\n",
@@ -456,7 +443,86 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(background_list)\n",
+    "    if not crashed:\n",
+    "        big_list += [character]\n",
+    "    \n",
+    "    big_list += platform_list\n",
+    "    big_list += box_list    \n",
+    "    big_list += gettable_list\n",
+    "    big_list += foreground_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<Platform.Platform object at 0x10e70d8d0>, <Platform.Platform object at 0x10da90240>, <Platform.Platform object at 0x10da90320>, <Platform.Moving_Platform object at 0x10da90400>, <Platform.Moving_Platform object at 0x10da90438>, <Box.Nitro object at 0x11e9deb70>, <Box.Metal object at 0x11e9decc0>, <Box.Nitro object at 0x11e9def60>, <Box.Metal_Wood object at 0x10da7f0f0>, <Box.Bouncey_Wood object at 0x10da7f390>, <Box.Metal_Wood object at 0x10da7f6a0>, <Box.Wood object at 0x10da7f940>, <Box.Metal_Wood object at 0x10da7fbe0>, <Box.Wood object at 0x10da7fe80>, <Box.Wood object at 0x10da93160>, <Box.Metal_Wood object at 0x10da93400>, <Box.Wood object at 0x10da936a0>, <Box.Wood object at 0x10da93940>, <Box.Metal_Wood object at 0x10da93be0>, <Box.Wood object at 0x10da93e80>, <Box.Wood object at 0x10da83160>, <Box.Metal_Wood object at 0x10da83400>, <Box.Wood object at 0x10da836a0>, <Box.Wood object at 0x10da83940>, <Box.Bouncey_Wood object at 0x10da83be0>, <Box.Bouncey_Wood object at 0x10da83ef0>, <Player.Player object at 0x10e729c50>, <Gettables.Fruit object at 0x10da905c0>, <Gettables.Fruit object at 0x10da906a0>, <Gettables.Fruit object at 0x10da90780>, <Gettables.Fruit object at 0x10da90860>, <Gettables.Fruit object at 0x10da90940>, <Gettables.Fruit object at 0x10da90a20>, <Gettables.Fruit object at 0x10da90b00>, <Gettables.Fruit object at 0x10da90be0>, <Gettables.Fruit object at 0x10da90cc0>, <Gettables.Fruit object at 0x10da90da0>]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(big_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = [23,3,4,4]\n",
+    "b = [343,43,34]\n",
+    "c = a+b\n",
+    "d = a\n",
+    "d+= b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1333"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(big_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[23, 3, 4, 4, 343, 43, 34]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d"
+   ]
   },
   {
    "cell_type": "code",
@@ -471,18 +537,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.3"
   }
  },
  "nbformat": 4,
