--- a/Boxy/Run.ipynb
+++ b/Boxy/Run.ipynb
@@ -435,7 +435,7 @@
     "\n",
     "Credits:\n",
     "“Sound effects obtained from zapsplat.com and freesound.org\"\n",
-    "\"Idea shamelessly taken from Crash Bandicoot 2: Wrath of Cortex for PS2\"\n"
+    "\"Idea inspired by but unrelated to Crash Bandicoot\"\n"
    ]
   },
   {
@@ -537,6 +537,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
