--- a/Boxy/Run.ipynb
+++ b/Boxy/Run.ipynb
@@ -4,33 +4,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Run cell below the play Boxy!"
+    "### Run cell below to play Boxy!\n",
+    "##### Requires PyGame Module"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pygame 1.9.6\n",
+      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
+     ]
+    }
+   ],
    "source": [
     "import pygame\n",
     "\n",
     "pygame.init()\n",
     "\n",
-    "import math\n",
-    "import Box\n",
-    "import numpy as np\n",
+    "# Standard modules\n",
+    "import math, copy, numpy as np\n",
+    "from random import randint\n",
+    "#from time import sleep\n",
+    "\n",
+    "# Custom \n",
+    "import Box, Platform\n",
     "from Super_Classes import Vector, Body, Shape, Looper\n",
-    "import Platform\n",
     "from Gettables import Fruit\n",
     "from Status import Status\n",
-    "from random import randint\n",
-    "import copy\n",
     "from Player import Player\n",
     "from Constants import G, box_size, S, display_size\n",
-    "from time import sleep\n",
     "from Make_Sounds import wood_bounce_sound, wood_break_sound, boom_sound, fruit_sound\n",
-    "from random import randint\n",
     "\n",
     "\n",
     "                    \n",
@@ -53,7 +62,7 @@
     "\n",
     "black = (0,0,0)\n",
     "white = (255,255,255)\n",
-    "floor = 500\n",
+    "floor = display_size[1]*5.0/6.0\n",
     "sky = (205, 230, 247)\n",
     "clock = pygame.time.Clock()\n",
     "background_speed = 7.0/8.0\n",
@@ -486,22 +495,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1333"
+       "[0.7600160354436547, 2.7507322767095674]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(big_list)"
+    "character.direction\n",
+    "character.shift_path[character.animate]"
    ]
   },
   {
@@ -537,18 +547,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.3"
   }
  },
  "nbformat": 4,
