new sounds, level object handling
ouch and power down sounds
object evolution (non-player) now folded inside level class
boxes make thud sound when they drop and hit the ground

--- a/Boxy/Run.ipynb
+++ b/Boxy/Run.ipynb
@@ -22,16 +22,14 @@
      ]
     },
     {
-     "ename": "error",
-     "evalue": "Unable to open file 'sounds/boom.wav'",
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31merror\u001b[0m                                     Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-838726e96cf9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;31m# Custom\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mBox\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mBox\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mSuper_Classes\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mBody\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mGettables\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mFruit\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Documents/GitHub/Games/Boxy/Box.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mSuper_Classes\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mBody\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mShape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mConstants\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mbox_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mG\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprotector_color\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprotector_line_color\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprotector_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0meye_color\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mMake_Sounds\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mwood_bounce_sound\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwood_break_sound\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mboom_sound\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprotection_sound\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Documents/GitHub/Games/Boxy/Make_Sounds.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0mwood_bounce2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_volume\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0mboom\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpygame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmixer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSound\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'sounds/boom.wav'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0mprotection\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpygame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmixer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSound\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'sounds/protection.wav'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31merror\u001b[0m: Unable to open file 'sounds/boom.wav'"
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-a8942f77d6bf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    199\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    200\u001b[0m   \u001b[0;31m#  sleep(0.1)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 201\u001b[0;31m     \u001b[0mpygame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdisplay\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    202\u001b[0m     \u001b[0mclock\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtick\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m45\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    203\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -46,25 +44,15 @@
     "#from time import sleep\n",
     "\n",
     "# Custom \n",
-    "from Box import Box\n",
+    "from Box import Box, resolve_fall\n",
     "from Super_Classes import Body\n",
     "from Gettables import Fruit\n",
     "from Status import Status\n",
     "from Player import Player\n",
     "from Constants import display_size, S\n",
     "from Level import Level\n",
-    "from Make_Sounds import ouch_sound\n",
+    "from Make_Sounds import ouch_sound, thud_sound\n",
     "\n",
-    "\n",
-    "                    \n",
-    "def resolve_fall(bod,bod2): #resolving fall for non-character objects\n",
-    "    if bod2.solid and bod2.pos[1]>bod.pos[1]: # bod 2 is below and solid\n",
-    "        dim,gap = bod.overlap_dim(bod2)\n",
-    "        if dim == 1 and gap>0.1:# bod2 is overlapping vertically\n",
-    "            bod.is_on(bod2)\n",
-    "            bod.pos[1] -= gap #shift bod up!\n",
-    "            return True # solved!\n",
-    "    return False\n",
     "\n",
     "\n",
     "gameDisplay = pygame.display.set_mode(display_size)\n",
@@ -172,17 +160,7 @@
     "##############################################################################    \n",
     "    # Move every non-player object and resolve their interactions\n",
     "    \n",
-    "    for bod in level.box_list:\n",
-    "        bod.move() # boxes not floating and not resting on will accelerate down\n",
-    "        if bod.vel[1] >0 and bod.solid:\n",
-    "            for bod2 in level.platform_list+level.box_list:\n",
-    "                if resolve_fall(bod,bod2):\n",
-    "                    if not isinstance(bod2,Box) or bod2.vel[1] == 0:\n",
-    "                        bod.vel[1] = 0\n",
-    "                        break\n",
-    "                        \n",
-    "    for bod in level.platform_list:\n",
-    "        bod.move()\n",
+    "    level.move_objects(thud_sound)\n",
     "    \n",
     "\n",
     "##############################################################################\n",
@@ -265,10 +243,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<Box.Bouncey_Wood at 0x115c2f5c0>]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "level.master_platform_list[3].on_me"
+   ]
   },
   {
    "cell_type": "markdown",
