screenshots and comments

--- a/Boxy/Run.ipynb
+++ b/Boxy/Run.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -19,17 +19,6 @@
      "text": [
       "pygame 1.9.6\n",
       "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-a8942f77d6bf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    199\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    200\u001b[0m   \u001b[0;31m#  sleep(0.1)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 201\u001b[0;31m     \u001b[0mpygame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdisplay\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    202\u001b[0m     \u001b[0mclock\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtick\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m45\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    203\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -160,7 +149,7 @@
     "##############################################################################    \n",
     "    # Move every non-player object and resolve their interactions\n",
     "    \n",
-    "    level.move_objects(thud_sound)\n",
+    "    level.move_objects(land_sound = thud_sound) # input is sound boxes make when they hit the ground\n",
     "    \n",
     "\n",
     "##############################################################################\n",
@@ -171,12 +160,9 @@
     "        # determine character's state and velocity\n",
     "        character.evolve(right_key-left_key,crouch_key,jump_key,attack_key,flop_key,jump_hold)\n",
     "        character.move()\n",
-    "        \n",
-    "        \n",
-    "        # sort box_list so that closest bodies interact first. \n",
-    "        # this prevents incorrect interactions like diagonally breaking boxes\n",
+    "          \n",
+    "        # sort box_list so that closest bodies interact first: prevents e.g. diagonally breaking boxes\n",
     "        level.box_list = sorted(level.box_list, key= lambda x: sum((character.pos-x.pos)**2), reverse=False)\n",
-    "\n",
     "        \n",
     "       # squeeze = [[False,False],[False,False]]\n",
     "     \n",
@@ -184,7 +170,8 @@
     "        for i in level.box_list+level.platform_list+level.gettable_list:\n",
     "            i.interact(character)\n",
     "            \n",
-    "        crashed = (character.protection == -1) and not character.invulnerable # some of these interactions might have killed ya.\n",
+    "        # some of these interactions might have killed ya.    \n",
+    "        crashed = (character.protection == -1) and not character.invulnerable \n",
     "        \n",
     "##############################################################################\n",
     "    # Prepare canvas and draw visuals\n",
