--- a/Boxy/Run.ipynb
+++ b/Boxy/Run.ipynb
@@ -12,35 +12,24 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pygame 1.9.6\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pygame\n",
     "\n",
     "pygame.init()\n",
     "\n",
     "# Standard modules\n",
-    "import math, copy, numpy as np\n",
-    "from random import randint\n",
+    "import numpy as np\n",
     "#from time import sleep\n",
     "\n",
     "# Custom \n",
-    "from Box import Box, resolve_fall\n",
     "from Super_Classes import Body\n",
-    "from Gettables import Fruit\n",
     "from Status import Status\n",
     "from Player import Player\n",
-    "from Constants import display_size, S\n",
+    "from Constants import display_size\n",
     "from Level import Level\n",
     "from Make_Sounds import ouch_sound, thud_sound\n",
+    "from Keyboard import Keyboard\n",
     "\n",
     "\n",
     "\n",
@@ -49,8 +38,6 @@
     "\n",
     "sky = (205, 230, 247)\n",
     "clock = pygame.time.Clock()\n",
-    "\n",
-    "  \n",
     "\n",
     "\n",
     "# Object to determine what to draw on screen\n",
@@ -61,88 +48,37 @@
     "\n",
     "\n",
     "death_delay = 60 # time after death level keeps tickin'\n",
-    "crashed = death_delay\n",
-    "jump_timer = 0\n",
+    "crashed = death_delay # start with a completed crash cycle to initalize everything\n",
     "\n",
-    "# set keys to false\n",
-    "left_key = False\n",
-    "right_key = False\n",
-    "up_key = False\n",
-    "down_key = False\n",
-    "crouch_key = False\n",
-    "jump_hold = False\n",
-    "\n",
+    "# initialize keyboard object to take in control data and feed it to the player object\n",
+    "keyboard = Keyboard()\n",
     "\n",
     "while True: # play the game\n",
     "\n",
     "##############################################################################\n",
-    "    # Handle character death and level reset\n",
-    "    if crashed or not screen.overlap(character): # character off screen = dead!\n",
+    "    # Handle player death and level reset\n",
+    "    \n",
+    "    if crashed or not screen.overlap(character): # player off screen = dead!\n",
     "        if crashed == death_delay:\n",
-    "            character= Player(level.player_start)\n",
+    "            character = Player(level.player_start)\n",
     "            crashed = False\n",
     "            level.reset()\n",
-    "            character.current_status = Status(lives = 14, fruit = 85, boxes = 0)\n",
+    "            character.current_status = Status(lives = 14, fruit = 85, boxes = 0) # arbitrary start for now\n",
     "        else:    \n",
     "            crashed += 1\n",
     "            \n",
-    "        if crashed == 2: # just died, play ouch!\n",
+    "        if crashed == 2: # just died, play ouch sound!\n",
     "            ouch_sound()\n",
     "\n",
     "            \n",
     "##############################################################################\n",
-    "    # Handle key inputs\n",
+    "    # Note keyboard inputs and store them (including killing player by quitting)\n",
     "    \n",
-    "    jump_timer -=1\n",
-    "    jump_key = False\n",
-    "    attack_key = False\n",
-    "    flop_key = False\n",
+    "    keyboard.handle_events(pygame.event.get())\n",
+    "      \n",
+    "    if keyboard.crashed and not crashed:\n",
+    "        crashed = True\n",
     "\n",
-    "    for event in pygame.event.get(): ### THIS IS NEEDED OR IT WILL CRASH\n",
-    "\n",
-    "        if event.type == pygame.KEYDOWN:\n",
-    "            if event.key == pygame.K_LEFT:\n",
-    "                left_key = True\n",
-    "            elif event.key == pygame.K_RIGHT:\n",
-    "                right_key = True\n",
-    "                \n",
-    "            elif event.key == pygame.K_UP:\n",
-    "                up_key = True\n",
-    "            elif event.key == pygame.K_DOWN:\n",
-    "                down_key = True\n",
-    "                \n",
-    "            elif event.key == pygame.K_c:\n",
-    "                crouch_key = True\n",
-    "                flop_key = True\n",
-    "        \n",
-    "            elif event.key == pygame.K_x:\n",
-    "                jump_key = True\n",
-    "                jump_timer = character.jump_anticipation\n",
-    "                jump_hold = True\n",
-    "            \n",
-    "            elif event.key == pygame.K_z:\n",
-    "                attack_key = True\n",
-    "   \n",
-    "            elif event.key == pygame.K_q:\n",
-    "                if not crashed:\n",
-    "                    crashed = True\n",
-    "                \n",
-    "        elif event.type == pygame.KEYUP:\n",
-    "            if event.key == pygame.K_LEFT:\n",
-    "                left_key = False\n",
-    "            elif event.key == pygame.K_RIGHT:\n",
-    "                right_key = False\n",
-    "            elif event.key == pygame.K_c:\n",
-    "                crouch_key = False\n",
-    "            \n",
-    "            elif event.key == pygame.K_UP:\n",
-    "                up_key = False\n",
-    "            elif event.key == pygame.K_DOWN:\n",
-    "                down_key = False\n",
-    "            elif event.key == pygame.K_x:\n",
-    "                jump_hold = False\n",
-    "\n",
-    "                \n",
     "##############################################################################    \n",
     "    # Move every non-player object and resolve their interactions\n",
     "    \n",
@@ -150,12 +86,12 @@
     "    \n",
     "\n",
     "##############################################################################\n",
-    "    # Evolve character state, move character, and resolve character interactions\n",
+    "    # [if player is alive] Evolve its state, move it, and resolve interactions with other bodies\n",
     "\n",
-    "    if not crashed: # if character is dead, don't bother with this stuff until it's regenerated\n",
+    "    if not crashed: # if player is dead, skip this part\n",
     "          \n",
-    "        # determine character's state and velocity\n",
-    "        character.evolve(right_key-left_key,crouch_key,jump_key,attack_key,flop_key,jump_hold)\n",
+    "        # determine player's state and velocity, then move\n",
+    "        character.evolve(keyboard)\n",
     "        character.move()\n",
     "          \n",
     "        # sort box_list so that closest bodies interact first: prevents e.g. diagonally breaking boxes\n",
@@ -167,8 +103,8 @@
     "        for i in level.box_list+level.platform_list+level.gettable_list:\n",
     "            i.interact(character)\n",
     "            \n",
-    "        # some of these interactions might have killed ya.    \n",
-    "        crashed = (character.protection == -1) and not character.invulnerable \n",
+    "        # some of these interactions might have killed ya. Then ya dead!\n",
+    "        crashed = character.protection < 0\n",
     "        \n",
     "        \n",
     "##############################################################################\n",
@@ -180,15 +116,16 @@
     "            if not bod.corporeal:\n",
     "                body_list.remove(bod)\n",
     "                level.foreground_list.append(bod)\n",
-    "       \n",
-    "    # fill display with white and set center position\n",
+    "\n",
+    "\n",
+    "    # fill display with sky color and set center position for screen (only overlapping objects will draw)\n",
     "    gameDisplay.fill(sky)\n",
     "    screen.pos = np.array([character.pos[0]-display_size[0]/2,0])\n",
     "   \n",
-    "    # draw all bodies, clean foreground list\n",
+    "    # draw all bodies, then clean foreground list of dead objects\n",
     "    level.draw_level(gameDisplay,screen,character)\n",
     "\n",
-    "  #  sleep(0.1)\n",
+    "  #  sleep(0.1) # turned on for debugging\n",
     "    pygame.display.update()\n",
     "    clock.tick(45)\n",
     "\n",
@@ -267,6 +204,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
