--- a/Boxy/Run.ipynb
+++ b/Boxy/Run.ipynb
@@ -31,7 +31,7 @@
     "import numpy as np\n",
     "#from time import sleep\n",
     "\n",
-    "# Custom \n",
+    "# Custom classes and functions\n",
     "from Super_Classes import Body\n",
     "from Status import Status\n",
     "from Player import Player\n",
@@ -41,10 +41,9 @@
     "from Keyboard import Keyboard\n",
     "\n",
     "\n",
-    "\n",
+    "# Initialize game\n",
     "gameDisplay = pygame.display.set_mode(display_size)\n",
-    "pygame.display.set_caption('Game!')\n",
-    "\n",
+    "pygame.display.set_caption('Boxy!')\n",
     "sky = (205, 230, 247)\n",
     "clock = pygame.time.Clock()\n",
     "\n",
@@ -53,10 +52,9 @@
     "screen = Body([0,0],display_size,corporeal=True,solid=False,velocity=[0,0])   \n",
     "\n",
     "# Object holding all level Bodies and scenery\n",
-    "level = Level(num=0)\n",
+    "level = Level(num=0) # right now level 0\n",
     "\n",
-    "\n",
-    "death_delay = 60 # time after death level keeps tickin'\n",
+    "death_delay = 60 # time after player's death that the level keeps tickin'\n",
     "crashed = death_delay # start with a completed crash cycle to initalize everything\n",
     "\n",
     "# initialize keyboard object to take in control data and feed it to the player object\n",
@@ -70,7 +68,7 @@
     "    if crashed or not screen.overlap(character): # player off screen = dead!\n",
     "        if crashed == death_delay:\n",
     "            character = Player(level.player_start)\n",
-    "            crashed = False\n",
+    "            crashed = 0\n",
     "            level.reset()\n",
     "            character.current_status = Status(lives = 14, fruit = 85, boxes = 0) # arbitrary start for now\n",
     "            keyboard.reset()\n",
@@ -86,13 +84,13 @@
     "    \n",
     "    keyboard.handle_events(pygame.event.get())\n",
     "      \n",
-    "    if keyboard.crashed and not crashed:\n",
-    "        crashed = True\n",
+    "    if keyboard.crashed and not crashed: # if q key pressed, character is dead\n",
+    "        crashed = 1\n",
     "\n",
     "##############################################################################    \n",
     "    # Move every non-player object and resolve their interactions\n",
     "    \n",
-    "    level.move_objects(land_sound = thud_sound) # input is sound boxes make when they hit the ground\n",
+    "    level.move_objects()\n",
     "    \n",
     "\n",
     "##############################################################################\n",
@@ -114,25 +112,18 @@
     "            i.interact(character)\n",
     "            \n",
     "        # some of these interactions might have killed ya. Then ya dead!\n",
-    "        crashed = character.protection < 0\n",
+    "        if character.protection < 0:\n",
+    "            crashed = 1\n",
     "        \n",
     "        \n",
     "##############################################################################\n",
     "    # Prepare canvas and draw visuals\n",
-    "       \n",
-    "    # move all non-corporeal objects to the foreground\n",
-    "    for body_list in [level.box_list, level.gettable_list]:\n",
-    "        for bod in body_list[::-1]: # need to go in reverse else removal of two objects doesn't work\n",
-    "            if not bod.corporeal:\n",
-    "                body_list.remove(bod)\n",
-    "                level.foreground_list.append(bod)\n",
-    "\n",
     "\n",
     "    # fill display with sky color and set center position for screen (only overlapping objects will draw)\n",
     "    gameDisplay.fill(sky)\n",
     "    screen.pos = np.array([character.pos[0]-display_size[0]/2,0])\n",
     "   \n",
-    "    # draw all bodies, then clean foreground list of dead objects\n",
+    "    # move all non-corporeal objects to the foreground, draw all bodies, and clean foreground list of dead objects\n",
     "    level.draw_level(gameDisplay,screen,character)\n",
     "\n",
     "  #  sleep(0.1) # turned on for debugging\n",
@@ -167,6 +158,8 @@
     "\n",
     "Bad guys!\n",
     "\n",
+    "Edit sound files so they start quicker (doing this in finder made them unloadable)\n",
+    "\n",
     "### Squeezing is not currently configured at all (to kill player) (is this needed?)\n",
     "#### Definitely need to fix: currently, falling non-breakable boxes do not kill player\n",
     "\n",
@@ -177,6 +170,13 @@
     "“Sound effects obtained from zapsplat.com and freesound.org\"\n",
     "\"Idea inspired by but unrelated to Crash Bandicoot\"\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -184,18 +184,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.3"
   }
  },
  "nbformat": 4,
